# lemin

./: CMakeLists.txt  Makefile  a.out  lem-in  test
ft_printf/: Makefile
ft_printf/includes/: ft_printf.h
ft_printf/libft/: Makefile  ft_atoi.c  ft_copyarr.c  ft_isnum.c  ft_itoc.c  ft_printarr.c  ft_printarr_fd.c  ft_printnumbarr.c  ft_putstr.c  ft_putstr_fd.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strncpy.c  ft_strpart.c  ft_strscpy.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  get_next_line.c  libft.h
ft_printf/src/: fill_fl_struct.c  ft_printf.c  get_argument.c  indent_and_print_char.c  indent_and_print_integer.c  indent_and_print_string.c  indent_and_print_wide_string.c  parseconvstr.c  print_the_bit.c
header/: lemin.h
maps/: 20.map  run.sh
maps/Result/: 1.map  20.map  err_letter_in_coordinate.map  err_no_end2.map  err_no_start.map  err_no_start2.map  err_start_end_same.map  err_too_many_ants.map
src/: check.c  connections.c  error.c  flags.c  lemin.c  lists.c  move.c  path.c  print.c  read.c  way.c
